--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
 
     <!-- Basic theme color for mobile address bar -->
     <meta name="theme-color" content="#0f172a" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-Y3P9F4DPTK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-Y3P9F4DPTK");
+    </script>
   </head>
   <body class="bg-slate-50 text-slate-900 min-h-screen">
     <div id="root"></div>
